--- a/environment.yml
+++ b/environment.yml
@@ -16,4 +16,5 @@ dependencies:
     # - git+https://github.com/Cibiv/IQ-TREE.git@v2.0-rc2
     - git+https://github.com/cov-ert/clusterfunk.git@v0.0.1
     - pytools==2020.1
+    - dendropy>=4.4.0
     # - git+https://github.com/aineniamh/lineages.git
