--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: pangolin
+name: pangolin2
 channels:
   - bioconda
   - conda-forge
@@ -14,4 +14,4 @@ dependencies:
   - pip:
     - pytools==2020.1
     - dendropy>=4.4.0
-    - git+https://github.com/hCoV-2019/pangolin.git
+    # - git+https://github.com/hCoV-2019/pangolin.git
