--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -14,7 +14,7 @@ jobs:
           uses: actions/setup-python@v1
           with:
             python-version: 3.7
-        - name: Build sourcepredict
+        - name: build pangolin
           run: |
             pip install wheel
             python setup.py sdist bdist_wheel
