--- a/pangolin/scripts/Snakefile
+++ b/pangolin/scripts/Snakefile
@@ -15,8 +15,11 @@ if config.get("guide_tree"):
     config["guide_tree"] = os.path.join(workflow.current_basedir,'..', config["guide_tree"])
 
 if config.get("lineages_csv"):
-    config["lineages_csv"] = os.path.join(workflow.current_basedir,'..', config["lineages_csv"])
-
+    lineages_csv_path = os.path.join(workflow.current_basedir,'..', config["lineages_csv"])
+    config["lineages_csv"]=f"lineages_csv={lineages_csv_path} "
+else:
+    config["lineages_csv"]=""
+    
 config["pid"] = str(os.getpid())
 
 ##### Target rules #####
