outfile now can be specified with an optional --outfile argument. Default is still lineage_report.csv.

--- a/pangolin/scripts/Snakefile
+++ b/pangolin/scripts/Snakefile
@@ -35,7 +35,7 @@ config["pid"] = str(os.getpid())
 
 rule all:
     input:
-        config["outdir"] + "/lineage_report.csv"
+        config["outfile"]
 
 ##### Modules #####
 include: "assign_query_file.smk"
