iqtree version less than 2

--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,7 @@ dependencies:
   - biopython=1.74
   - iqtree
   - mafft
-  - iqtree=1.6.12
+  - iqtree<2
   - pip=19.3.1
   - python=3.6
   - snakemake-minimal=5.13
