datafunk as a part of the environment

--- a/environment.yml
+++ b/environment.yml
@@ -14,4 +14,5 @@ dependencies:
     - pandas==1.0.1
     - pytools==2020.1
     - dendropy>=4.4.0
+    - git+https://github.com/cov-ert/datafunk.git
     - git+https://github.com/hCoV-2019/lineages.git
