--- a/.github/workflows/pangolin.yml
+++ b/.github/workflows/pangolin.yml
@@ -4,7 +4,11 @@ on: [push, pull_request]
 
 jobs:
   run_pangolin_test:
-    runs-on: ubuntu-latest
+    name: Pangolin test on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: ["ubuntu-latest", "macos-latest"]
     steps:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
