removing legacy, adding quiet mode with custom logger, coloured print outs

--- a/environment.yml
+++ b/environment.yml
@@ -1,20 +1,15 @@
-name: pangolin
+name: pangolin2
 channels:
   - conda-forge
   - bioconda
   - defaults
 dependencies:
   - biopython=1.74
-  - iqtree<2
-  - mafft
   - minimap2
   - pip=19.3.1
   - python=3.7
   - snakemake-minimal=5.13
   - pip:
     - pandas==1.0.1
-    - pytools==2020.1
-    - dendropy>=4.4.0
     - git+https://github.com/cov-ert/datafunk.git
     - git+https://github.com/cov-lineages/pangoLEARN.git
-    - git+https://github.com/cov-lineages/lineages.git@2020-05-19-2 
