min minimap2 version

--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ channels:
   - defaults
 dependencies:
   - biopython=1.74
-  - minimap2
+  - minimap2>=2.16
   - pip=19.3.1
   - python=3.7
   - snakemake-minimal=5.13
