added designation dependancy

--- a/environment.yml
+++ b/environment.yml
@@ -10,9 +10,11 @@ dependencies:
   - python>=3.7
   - snakemake-minimal>=5.13
   - gofasta
-  - usher>=0.3.1
+  - usher
   - pip:
     - pandas==1.0.1
     - git+https://github.com/cov-lineages/pangoLEARN.git
     - git+https://github.com/cov-lineages/scorpio.git
     - git+https://github.com/cov-lineages/constellations.git
+    - git+https://github.com/cov-lineages/pango-designation.git
+
