Fix usage of sysargs, add pytest tests

--- a/.github/workflows/pangolin.yml
+++ b/.github/workflows/pangolin.yml
@@ -25,4 +25,5 @@ jobs:
         run: pangolin --version
       - name: Run pangolin with test data
         run: pangolin pangolin/test/test_seqs.fasta 2>&1 | tee pangolin.log
-# add more tests here
+      - name: Install and run pytest
+        run: mamba install -y pytest && python -m pytest tests/
