--- a/environment.yml
+++ b/environment.yml
@@ -12,9 +12,11 @@ dependencies:
   - gofasta
   - pysam==0.16.0.1
   - usher>=0.3.2
+  - git-lfs
   - pip:
     - git+https://github.com/cov-lineages/pangoLEARN.git
     - git+https://github.com/cov-lineages/scorpio.git
     - git+https://github.com/cov-lineages/constellations.git
     - git+https://github.com/cov-lineages/pango-designation.git
+    - git+https://github.com/cov-lineages/pangolin-assignment.git
 
