--- a/.github/workflows/pangolin_macos.yml
+++ b/.github/workflows/pangolin_macos.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: ["ubuntu-latest"]
+        os: ["macos-latest"]
     steps:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
@@ -51,10 +51,6 @@ jobs:
         run: pangolin --all-versions  2>&1  | tee pangolin_versions.log
       - name: Run pangolin skip designation cache
         run: pangolin  pangolin/test/test_seqs.fasta --skip-designation-cache   2>&1  | tee pangolin_no_cache.log
-      - name: Run pangolin update 
-        run: pangolin --update   2>&1  | tee pangolin_update.log
-      - name: Run pangolin update data
-        run: pangolin --update-data   2>&1  | tee pangolin_update_data.log
       - name: Run pangolin verbose mode
         run: pangolin --verbose  pangolin/test/test_seqs.fasta  2>&1  | tee pangolin_verbose.log
 
