--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,7 @@ dependencies:
   - snakemake-minimal<=6.8.0
   - gofasta
   - pysam==0.16.0.1
+  - ucsc-fatovcf>=426
   - usher>=0.3.2
   - git-lfs
   - pip:
