--- a/environment.yml
+++ b/environment.yml
@@ -8,7 +8,7 @@ dependencies:
   - minimap2>=2.16
   - pip=19.3.1
   - python>=3.7
-  - snakemake-minimal<=6.8.0
+  - snakemake-minimal
   - gofasta
   - ucsc-fatovcf>=426
   - usher>=0.5.4
