Update environment.yml to handle snakemake dependencies
* Incremented minimal required python to 3.9
* Locked snakemake version

--- a/environment.yml
+++ b/environment.yml
@@ -7,8 +7,8 @@ dependencies:
   - biopython>=1.74
   - minimap2>=2.16
   - pip=19.3.1
-  - python>=3.7
-  - snakemake-minimal
+  - python>=3.9
+  - snakemake-minimal=7.30.2
   - gofasta
   - ucsc-fatovcf>=426
   - usher>=0.5.4
