--- a/.github/workflows/pangolin_macos.yml
+++ b/.github/workflows/pangolin_macos.yml
@@ -18,7 +18,7 @@ jobs:
           environment-file: environment.yml
           activate-environment: pangolin
           channels: conda-forge,bioconda,defaults
-          mamba-version: "*"
+          miniforge-variant: Mambaforge
       - name: Install pangolin
         run: pip install -e .
       - name: Check pangolin version
