--- a/.github/workflows/pangolin.yml
+++ b/.github/workflows/pangolin.yml
@@ -18,6 +18,7 @@ jobs:
           environment-file: environment.yml
           activate-environment: pangolin
           channels: conda-forge,bioconda,defaults
+          conda-version: "23.5.0"
           mamba-version: "*"
       - name: Install pangolin
         run: pip install -e .
