Get workflows running again * Remove conda-version setting because it constrained python to 3.10 or 3.11 but that caused a conflict with a pinned python 3.12. * pangolin_macos.yml needs setup-miniconda@v2 for now because it sets architecture to x86_64, and setup-miniconda@v3 uses arm64 which is not working for usher yet.  pangolin_macos.yml also needs to set miniconda-version to latest so conda installation doesn't fail.

--- a/.github/workflows/pangolin_macos.yml
+++ b/.github/workflows/pangolin_macos.yml
@@ -12,14 +12,13 @@ jobs:
       matrix:
         os: ["macos-latest"]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - uses: conda-incubator/setup-miniconda@v2
         with:
           environment-file: environment.yml
           activate-environment: pangolin
           channels: conda-forge,bioconda,defaults
-          conda-version: "23.5.0"
-          mamba-version: "*"
+          miniconda-version: "latest"
       - name: Install pangolin
         run: pip install -e .
       - name: Check pangolin version
