--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@ name: pangolin
 channels:
   - conda-forge
   - bioconda
-  - defaults
+  - nodefaults
 dependencies:
   - biopython>=1.74
   - minimap2>=2.16
